# baseball

./: Cargo.toml  rustfmt.toml
.github/workflows/: checks.yml  ci.yml
assets/: official_rules.txt
src/: lib.rs  main.rs
src/baseball/: baserunners.rs  core.rs  field.rs  game.rs  inning.rs  lineup.rs  mod.rs  pa.rs  plate_appearance.rs
src/game/: start.rs
src/game/plugins/: baseball.rs
