[package]
name = "baseball"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16.1", features = ["file_watcher"] }
bevy-inspector-egui = "0.31.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
